@@ -26,28 +26,21 @@ public class SortedArrayListPriorityQueue<T> implements PriorityQueue<T> {
 
     @Override
     public void enqueue(int priority, T data) {
-    Entry<T> newEntry = new Entry<>(priority, data);
-    int i = 0;
-    while (i < list.size() && list.get(i).priority <= priority) {
-            i++;
-        }
-        list.add(i, newEntry);
+        // TODO: insert so list is sorted by priority ASC (lower number is higher priority)
+        list.add(new Entry<>(priority, data));
+        list.sort(null);
     }
 
     @Override
     public T dequeue() throws Exception {
-    if (isEmpty()) {
-        throw new Exception("PriorityQueue is empty");
-        }
+        // TODO: remove index 0
         return list.remove(0).data;
     }
 
     @Override
     public T front() throws Exception {
-    if (isEmpty()) {
-        throw new Exception("PriorityQueue is empty");
-        }
-    return list.get(0).data;
+        // TODO: return index 0
+        return list.getFirst().data;
     }
 
     @Override
